--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <a href="#awards">Awards</a>
     </nav>
     <div class="cta">
-      <a class="button" href="assets/CV.pdf" download>Download PDF</a>
-      <a class="button secondary" href="https://github.com/new" target="_blank" rel="noopener">Fork to GitHub</a>
+      <a class="button" href="assets/CV.pdf" download>Download CV</a>
     </div>
   </header>
 
